--- a/assets/css/css_default/kofta.css
+++ b/assets/css/css_default/kofta.css
@@ -230,55 +230,55 @@ a2022 {
 }
 
 .block1_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta1.jpeg);
+    background-image: url(../../images/koft/kofta1.jpeg);
 }
 
 .block2_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta2.jpeg);
+    background-image: url(../../images/koft/kofta2.jpeg);
 }
 
 .block3_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta3.jpeg);
+    background-image: url(../../images/koft/kofta3.jpeg);
 }
 
 .block4_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta4.jpeg);
+    background-image: url(../../images/koft/kofta4.jpeg);
 }
 
 .block5_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta5.jpeg);
+    background-image: url(../../images/koft/kofta5.jpeg);
 }
 
 .block6_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta6.jpeg);
+    background-image: url(../../images/koft/kofta6.jpeg);
 }
 
 .block7_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta14.jpeg);
+    background-image: url(../../images/koft/kofta7.jpeg);
 }
 
 .block8_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta8.jpeg);
+    background-image: url(../../images/koft/kofta8.jpeg);
 }
 
 .block9_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta9.jpeg);
+    background-image: url(../../images/koft/kofta9.jpeg);
 }
 
 .block10_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta10.jpeg);
+    background-image: url(../../images/koft/kofta10.jpeg);
 }
 
 .block11_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta11.jpeg);
+    background-image: url(../../images/koft/kofta11.jpeg);
 }
 
 .block12_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta12.jpeg);
+    background-image: url(../../images/koft/kofta12.jpeg);
 }
 
 .block13_ph {
-    background-image: url(/html/balapashka.com/inside_kat/assets/images/koft/kofta13.jpeg);
+    background-image: url(../../images/koft/kofta13.jpeg);
 }
 
 
